# jakki

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  build-with-docker.sh  flake.nix  imgui.ini  meson.build  vcpkg.json
.github/: dependabot.yaml
.github/workflows/: build.yaml
src/: audio.cpp  audio.hpp  auth.cpp  auth.hpp  config.cpp  config.hpp  gui.cpp  gui.hpp  main.cpp  network.cpp  network.hpp
src/audio/: audio.cpp  audio.hpp  audio_impl.cpp  audio_impl.hpp  pipewire_impl.cpp  pipewire_impl.hpp  wasapi_impl.cpp  wasapi_impl.hpp
src/chat/: emoji_data.cpp  emoji_data.hpp  emote_completer.cpp  emote_completer.hpp  emote_manager.cpp  emote_manager.hpp  text.cpp  text.hpp
src/platform/: audio.cpp  audio.hpp  platform.cpp  window.cpp  window.hpp
src/video/: decode.cpp  decode.hpp  decoder.cpp  decoder.hpp  dxgi_impl.cpp  dxgi_impl.hpp  encode.cpp  encode.hpp  pipewire_impl.cpp  pipewire_impl.hpp  renderer.cpp  renderer.hpp  screen_renderer.hpp  video.cpp  video.hpp  video_impl.cpp  video_impl.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp
src/video/capture/: capture.hpp  capture_linux.cpp  capture_linux.hpp  capture_windows.cpp  capture_windows.hpp
src/video/decode/: decoder.cpp  decoder.hpp
src/video/encode/: encoder.cpp  encoder.hpp  nvenc_linux.cpp  nvenc_linux.hpp  nvenc_windows.cpp  nvenc_windows.hpp
src/video/render/: screen_renderer.cpp  screen_renderer.hpp  vulkan_renderer.cpp
ui/: adminpanel.ui  connect.ui  jakki.qrc  main.ui  screenshare.ui  settings.ui  textchannel.ui
ui/shaders/: bgra_to_nv12.comp  screen.frag  screen.vert
ui/styles/: default.qss
